<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@android:color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/txtResult"
        android:textSize="@dimen/font_big"
        android:gravity="right"
        android:layout_gravity="center"
        android:padding="@dimen/padding_medium"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/AC"
            android:id="@+id/btnAC"
            android:textSize="@dimen/font_medium"
            android:background="@color/orange_custom"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sign"
            android:id="@+id/btnSign"
            android:textSize="@dimen/font_medium"
            android:background="@color/orange_custom"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/percent"
            android:id="@+id/btnPercent"
            android:textSize="@dimen/font_medium"
            android:background="@color/orange_custom"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/division"
            android:id="@+id/btnDivision"
            android:textSize="@dimen/font_medium"
            android:background="@color/orange_custom"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/seven"
            android:id="@+id/btnSeven"
            android:textSize="@dimen/font_medium"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eight"
            android:id="@+id/btnEight"
            android:textSize="@dimen/font_medium"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nine"
            android:id="@+id/btnNine"
            android:textSize="@dimen/font_medium"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:id="@+id/btnMultiply"
            android:textSize="@dimen/font_medium"
            android:background="@color/orange_custom"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/four"
            android:id="@+id/btnFour"
            android:textSize="@dimen/font_medium"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/five"
            android:id="@+id/btnFive"
            android:textSize="@dimen/font_medium"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/six"
            android:id="@+id/btnSix"
            android:textSize="@dimen/font_medium"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/less"
            android:id="@+id/btnLess"
            android:textSize="@dimen/font_medium"
            android:background="@color/orange_custom"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/one"
            android:id="@+id/btnOne"
            android:textSize="@dimen/font_medium"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/two"
            android:id="@+id/btnTwo"
            android:textSize="@dimen/font_medium"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/three"
            android:id="@+id/btnThree"
            android:textSize="@dimen/font_medium"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:id="@+id/btnPlus"
            android:textSize="@dimen/font_medium"
            android:background="@color/orange_custom"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/zero"
            android:id="@+id/btnZero"
            android:textSize="@dimen/font_medium"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dot"
            android:id="@+id/btnDot"
            android:textSize="@dimen/font_medium"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equal"
            android:id="@+id/btnEqual"
            android:textSize="@dimen/font_medium"
            android:background="@color/orange_custom"/>



    </LinearLayout>

</LinearLayout>
